tests/typing/fail/multi_assign_id_tuple_fail1.rb

x = 1, 2

x[0].foo
